--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,23 +1,23 @@
-<h1>Cats!</h1>
+<h1>Burgers!</h1>
 
 <h2>This should be about burgers</h2>
 
 <ul>
-    {{#each burger}}
-    {{#unless devoured}}
+    {{#each burgers}}
+        {{#unless devoured}}
 
-    {{!-- ELYZA: this is the folder that the cat.block is in for partials --}}
-    {{> burgers/burger-block sleep=true}}
-    {{/unless}}
+        {{!-- ELYZA: this is the folder that the cat.block is in for partials --}}
+            {{> bfolder/burger-block devoured=false}}
+        {{/unless}}
     {{/each}}
 </ul>
 
 <h2>The Ultimate Burger List</h2>
 
 <ul>
-    {{#each burger}}
+    {{#each burgers}}
     {{#if devoured}}
-    {{> burgers/burger-block devoured=false}}
+    {{> bfolder/burger-block devoured=false}}
     {{/if}}
     {{/each}}
 </ul>
@@ -26,13 +26,13 @@
 <form class="create-form">
 
     <div class="form-group">
-        <label for="ca">Cat Name:</label>
+        <label for="ca">Burger Name:</label>
         <input type="text" id="ca" name="name">
     </div>
 
     <div class="form-group">
         <label for="devoured">Devoured?</label><br>
-        <input type="radio" name="devoured" value="1" checked> devoured!<br>
+        <input type="radio" name="devoured" value="1" checked> Devoured!<br>
         <input type="radio" name="devoured" value="0"> Awake
     </div>
 
