adjusted the true/false lined in the handlebars to move hte content from one end to the other:

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -17,3 +17,12 @@ li {
 .form-group {
   margin-bottom: 5px;
 }
+
+.holds-all-burgers {
+  display: flex;
+  justify-content: space-around;
+};
+
+.holds-half {
+  display: flex;
+}
