--- a/views/partials/bfolder/burger-block.handlebars
+++ b/views/partials/bfolder/burger-block.handlebars
@@ -2,8 +2,8 @@
     {{burger_name}}
 
     <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-        {{#if devoured}}DEVOUR TIME!{{else}}WAIT TO EAT!{{/if}}
+        {{#if devoured}}Eat it now!!{{else}}Add to the list{{/if}}
     </button>
 
-    <button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+    <button class="delete-burger" data-id="{{this.id}}">Delete</button>
 </li>
