--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,16 +5,31 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
     <title>Burger Lister</title>
+
+    {{!-- bootstrap --}}
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    {{!-- jQuery --}}
     <script src="https://code.jquery.com/jquery.js"></script>
+
+    {{!-- JS --}}
     <script src="/assets/js/burger-logic.js"></script>
 </head>
 
-<body>
-    {{{ body }}}
+<body class="background">
+    <div class="container">
+
+        {{{ body }}}
+
+    </div>
+
+    <footer>
+        <p>This is the footer</p>
+    </footer>
+
 </body>
 
-<footer>
-    <p>This is the footer</p>
-</footer>
+
 
 </html>
