--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,28 +1,100 @@
+
+
+body {
+  background-image: url("../img/burger-tile.png");
+  background-repeat: repeat;
+  background-position: center;
+  /* width: 100%; */
+  /* height: 100%; */
+  /* background-attachment: fixed; */
+  background-attachment: fixed;
+  background-color: gray;
+}
+
+.container {
+  background-color: #8ccab4;
+  border: #00000025 solid 3px;
+  margin: 2rem;
+  padding: 1rem;
+}
+
+
+.main-content {
+  /* display: flex; */
+  /* flex-direction: column; */
+}
+
 li {
   padding: 5px;
   margin: 5px;
-  background: #faebd7;
-}
-
-.label {
-  font-weight: bold;
-}
-
-.create-update-form {
-  padding: 5px;
-  margin: 5px;
-  background: aqua;
-}
-
-.form-group {
-  margin-bottom: 5px;
+  background: gray;
+  list-style-type: none;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
 }
 
 .holds-all-burgers {
   display: flex;
   justify-content: space-around;
-};
+}
 
 .holds-half {
+  padding: 1rem;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #00000050;
 }
+
+.title {
+  text-align: center;
+}
+
+.sub-text {
+  text-align: center;
+}
+.subtitle {
+  text-align: center;
+  color: white;
+}
+
+.holds-input {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 1rem;
+  padding: 1rem;
+  background-color: #00000050;
+  border: #00000025 solid 3px;
+}
+
+.input-item {
+  display: flex;
+  flex-direction: column;
+}
+
+.burger-items {
+  display: flex;
+  justify-content: space-between;
+  border: #00000025 solid 3px;
+  overflow: hidden;
+}
+
+.burger-buttons {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+}
+
+
+.delete-burger {
+  background-color: #c99b61;
+  margin-top: 0.5rem;
+}
+
+.change-devoured:hover {
+  background-color: green;
+}
+
