--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,8 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    
+    {{!-- CSS --}}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <link rel="stylesheet" href="/assets/css/burger_style.css" type="text/css" />
-    <title>Burger Lister</title>
+    
+    {{!-- Google Fonts --}}
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
 
     {{!-- bootstrap --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -15,6 +20,9 @@
 
     {{!-- JS --}}
     <script src="/assets/js/burger-logic.js"></script>
+    
+    <title>Burger Lister</title>
+
 </head>
 
 <body class="background">
@@ -24,8 +32,9 @@
 
     </div>
 
-    <footer>
-        <p>This is the footer</p>
+    <footer class="pt-3">
+        <p id="footer-text" class="footer">// from the mind of <a href="https://github.com/emilybaum"
+                target="_blank">emilybaum</a></p>
     </footer>
 
 </body>
