--- a/views/partials/bfolder/burger-block.handlebars
+++ b/views/partials/bfolder/burger-block.handlebars
@@ -1,5 +1,7 @@
 <li class="burger-items">
-    {{burger_name}}
+    <div class="animated pulse burger-name">
+        {{burger_name}} 
+    </div>
 
     <div class="burger-buttons">
         <button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
