--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 
     <div class="row">
-        <div class="mx-auto col-sm-6">
+        <div class="mx-auto col-sm-9">
             <h1 class=" title">The Ultimate Burger List</h1>
             <p class="sub-text">Enter the name of any burger to add it to the list, then you can click <strong>Eat it now!</strong> to move that burger to the consumed list.</p> 
             <p class="sub-text">And, you always have the option to <strong>remove</strong> any burger too.</p>
@@ -14,7 +14,7 @@
                 <form class="create-form input-item">
             
                     <div class="form-group">
-                        <label for="ca">Burger Name:</label>
+                        <label for="ca">Type the name of the burger:</label>
                         <input type="text" id="ca" name="burger_name">
                     </div>
             
