--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,6 +10,9 @@
     
     {{!-- Google Fonts --}}
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 
     {{!-- bootstrap --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -30,12 +33,14 @@
 
         {{{ body }}}
 
-    </div>
+    
 
     <footer class="pt-3">
         <p id="footer-text" class="footer">// from the mind of <a href="https://github.com/emilybaum"
                 target="_blank">emilybaum</a></p>
     </footer>
+
+    </div>
 
 </body>
 
