--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,9 @@
 
     <div class="row">
         <div class="mx-auto col-sm-9">
-            <h1 class=" title">The Ultimate Burger List</h1>
-            <p class="sub-text">Enter the name of any burger to add it to the list, then you can click <strong>Eat it now!</strong> to move that burger to the consumed list.</p> 
-            <p class="sub-text">And, you always have the option to <strong>remove</strong> any burger too.</p>
+            <h1 class="title">The Ultimate Burger List</h1>
+            <p class="mx-auto sub-text">Enter the name of any burger to add it to the list, then you can click <strong>Eat it now!</strong> to move that burger to the consumed list.</p> 
+            <p class="mx-auto sub-text">And, you always have the option to <strong>remove</strong> any burger too.</p>
         </div>
     </div>
 
@@ -18,7 +18,7 @@
                         <input type="text" id="ca" name="burger_name">
                     </div>
             
-                    <button type="submit">Add Burger</button>
+                    <button class="submit-button" type="submit">Add Burger</button>
                 </form>
             </div>
         </div>
